--- a/ProMgt.Client/Components/Task/TaskDashboard.razor
+++ b/ProMgt.Client/Components/Task/TaskDashboard.razor
@@ -30,17 +30,17 @@
         <MudGrid>
             <MudItem xs="12" lg="6">
                 <MudPaper Outlined="true" Class="mud-width-full rounded-lg pa-4">
-                    <MudITem Class="chart-title pb-8">
+                    <MudItem Class="chart-title pb-8">
                         Tasks by completion status
-                    </MudITem>
+                    </MudItem>
                    <TaskCompletionStatusChart ProjectId="ProjectId" />
                 </MudPaper>
             </MudItem>
             <MudItem xs="12" lg="6">
                 <MudPaper Outlined="true" Class="mud-width-full rounded-lg pa-4">
-                     <MudITem Class="chart-title  pb-8">
+                    <MudItem Class="chart-title  pb-8">
                         Tasks by status
-                    </MudITem>
+                    </MudItem>
                     <TaskTaskStatusChart ProjectId="ProjectId" />
                 </MudPaper>
             </MudItem>
