--- a/ProMgt.Client/_Imports.razor
+++ b/ProMgt.Client/_Imports.razor
@@ -19,7 +19,6 @@
 @using Microsoft.AspNetCore.Authorization
 @using ProMgt.Client.Components
 @using ProMgt.Client.Components.Dialogs
-@using ProMgt.Client.Components.Project
 @using ProMgt.Client.Components.Task
 @using ProMgt.Client.Components.Field
 @using ProMgt.Client.Models
@@ -31,5 +30,6 @@
 @using ProMgt.Client.Models.Fields.TaskStatus
 @using ProMgt.Client.Models.Section
 @using ProMgt.Client.Components.Task.TaskStatistics
+@using ProMgt.Client.Components.Skeleton
 
 
