--- a/ProMgt.Client/Components/Task/TaskGrid.razor
+++ b/ProMgt.Client/Components/Task/TaskGrid.razor
@@ -69,126 +69,11 @@
                                    DateChanged="@((DateTime? date)=>OnDateChanged(task.Id, date))" />
                 </td>
                 <td>
-                    <MudMenu FullWidth="true" AnchorOrigin="Origin.BottomLeft" TransformOrigin="Origin.TopLeft">
-                        <ActivatorContent>
-                            <MudButton Size="Size.Small">
-
-                                @if (task.PriorityId >= 1)
-                                {
-                                    Console.WriteLine("ID is within the valid range.");
-                                    foreach (var p in Priorities)
-                                    {
-
-                                        if (p.Id == task.PriorityId)
-                                        {
-                                            <MudChip Size="Size.Small"
-                                                     Icon="@Icons.Material.Filled.Circle"
-                                                     IconColor="Color.Default"
-                                                     Color="Color.Default"
-                                                     T="string"
-                                                     Variant="Variant.Text"
-                                                     Style="@($"--mud-palette-default: {p.HexColor}; --text-color: {p.HexColor}; --bg-color: {GetBackgroundColor(p.HexColor)}; background-color: var(--bg-color); color: var(--text-color);")">
-                                                @p.Name
-                                            </MudChip>
-                                        }
-
-                                    }
-                                }
-                                else
-                                {
-                                    Console.WriteLine("ID is disqualified in Data Grid.");
-                                    <MudChip Size="Size.Small"
-                                             Icon="@Icons.Material.Filled.Update"
-                                             IconColor="Color.Default"
-                                             Color="Color.Default"
-                                             T="string"
-                                             Variant="Variant.Text">
-                                        Add Priority
-                                    </MudChip>
-                                }
-
-                                <MudIcon Icon="@Icons.Material.Filled.ArrowDropDown" Title="Favorite" />
-                            </MudButton>
-                        </ActivatorContent>
-                        <ChildContent>
-                            @foreach (var p in Priorities)
-                            {
-                                <MudMenuItem OnClick="()=>UpdateTaskPriorityHandler(task.Id, p.Id)">
-                                    <MudChip Size="Size.Small"
-                                             Icon="@Icons.Material.Filled.Circle"
-                                             IconColor="Color.Default"
-                                             Color="Color.Default"
-                                             T="string"
-                                             Variant="Variant.Text"
-                                             Style="@($"--mud-palette-default: {p.HexColor}; --text-color: {p.HexColor}; --bg-color: {GetBackgroundColor(p.HexColor)}; background-color: var(--bg-color); color: var(--text-color);")">
-                                        @p.Name.ToUpper()
-                                    </MudChip>
-                                </MudMenuItem>
-
-                            }
-                        </ChildContent>
-                    </MudMenu>
+                   <PriorityDropDown ProjectId="ProjectId" TaskId="@task.Id"/>
                 </td>
 
                 <td>
-                    <MudMenu AnchorOrigin="Origin.BottomLeft" FullWidth="true" TransformOrigin="Origin.TopLeft">
-                        <ActivatorContent>
-                            <MudButton FullWidth="true" Size="Size.Large">
-
-                                @if (task.TaskStatusId >= 1)
-                                {
-                                    Console.WriteLine("ID is within the valid range.");
-                                    foreach (var ts in TaskStatuses)
-                                    {
-
-                                        if (ts.Id == task.TaskStatusId)
-                                        {
-                                            <MudChip Size="Size.Small"
-                                                     Icon="@Icons.Material.Filled.Circle"
-                                                     IconColor="Color.Default"
-                                                     Color="Color.Default"
-                                                     T="string"
-                                                     Variant="Variant.Text"
-                                                     Style="@($"--mud-palette-default: {ts.HexColor}; --text-color: {ts.HexColor}; --bg-color: {GetBackgroundColor(ts.HexColor)}; background-color: var(--bg-color); color: var(--text-color);")">
-                                                @ts.Name
-                                            </MudChip>
-                                        }
-
-                                    }
-                                }
-                                else
-                                {
-                                    Console.WriteLine("ID is disqualified in Data Grid.");
-                                    <MudChip Size="Size.Small"
-                                             Icon="@Icons.Material.Filled.Update"
-                                             IconColor="Color.Default"
-                                             Color="Color.Default"
-                                             T="string"
-                                             Variant="Variant.Text">
-                                        Add Status
-                                    </MudChip>
-                                }
-                                <MudIcon Icon="@Icons.Material.Filled.ArrowDropDown" Title="Favorite" />
-                            </MudButton>
-                        </ActivatorContent>
-                        <ChildContent>
-                            @foreach (var ts in TaskStatuses)
-                            {
-                                <MudMenuItem OnClick="()=>UpdateTaskStatusHandler(task.Id,ts.Id)">
-                                    <MudChip Size="Size.Small"
-                                             Icon="@Icons.Material.Filled.Circle"
-                                             IconColor="Color.Default"
-                                             Color="Color.Default"
-                                             T="string"
-                                             Variant="Variant.Text"
-                                             Style="@($"--mud-palette-default: {ts.HexColor}; --text-color: {ts.HexColor}; --bg-color: {GetBackgroundColor(ts.HexColor)}; background-color: var(--bg-color); color: var(--text-color);")">
-                                        @ts.Name.ToUpper()
-                                    </MudChip>
-                                </MudMenuItem>
-
-                            }
-                        </ChildContent>
-                    </MudMenu>
+                   <TaskStatusDropDown ProjectId="ProjectId" TaskId="@task.Id"/>
                 </td>
             </tr>
         }
@@ -268,8 +153,9 @@
     {
         ProjectService.OnNewTaskAddedChanged += UpdateTaskList;
         ProjectService.TaskInforUpdated += UpdateTaskList;
-        await GetTasks();
+        ProjectService.TaskFieldUpdated += UpdateTaskList;
         await GetTaskPriorities();
+        await GetTasks();
         await GetTaskStatuses();
     }
 
