--- a/ProMgt.Client/Pages/Generics/Signin.razor
+++ b/ProMgt.Client/Pages/Generics/Signin.razor
@@ -4,79 +4,64 @@
 @inject NavigationManager NavigationManager
 @inject HttpClient HttpClient
 
+
 <PageTitle>Sign in</PageTitle>
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="d-flex justify-center align-center" style="height: 94vh;" Gutters="false">
-    <MudGrid Style="height:800px!important" Spacing="0">
-        <MudItem Class="@GetClass()" lg="6" md="6">
-            <MudText Typo="Typo.h3">ProMgt</MudText>
-            <MudText Typo="Typo.h4">Sign in</MudText>
-        </MudItem>
-        <MudItem lg="6" md="6">
-            <MudPaper Style="height:800px!important" Class="p-8 rounded-r-xl">
-                <EditForm Model="@Input" OnValidSubmit="SignInHandler" FormName="login" method="post">
-                    <MudGrid Spacing="0" Class="pa-8">
-                        <DataAnnotationsValidator />
-                        <ValidationSummary />
-                        <MudItem xs="12">
-                            <div class="d-flex justify-center">
-                                <MudIcon Icon="@CustomIcons.ProMgtLogo" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 100px; height: 100px;" />
-                            </div>
-                        </MudItem>
-                        <MudItem xs="12">
-                            <div class="d-flex justify-center">
-                                <MudText Typo="Typo.h4">Sign-in</MudText>
-                            </div>
-                        </MudItem>
-                        <MudItem xs="12">
-                            <div class="d-flex justify-center">
-                                <MudText GutterBottom="true" Typo="Typo.body1">Use a local account to log in.</MudText>
-                            </div>
-                        </MudItem>
-                        <MudItem md="12">
-                            <MudTextField Label="Email"
-                                          Class="mt-3"
-                                          @bind-Value="Input.Email"
-                                          For="@(() => Input.Email)" />
-                        </MudItem>
-                        <MudItem md="12">
-                            <MudTextField Label="Password"
-                                          Class="mt-3"
-                                          @bind-Value="Input.Password"
-                                          For="@(() => Input.Password)"
-                                          InputType="InputType.Password" />
-                        </MudItem>
-                        <MudItem md="12">
-                            <MudCheckBox Color="Color.Primary"
-                                         For="@(() => Input.RememberMe)"
-                                         @bind-Value="Input.RememberMe">Remember me</MudCheckBox>
-                        </MudItem>
-                        <MudItem md="12">
-                            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Size="Size.Large" Color="Color.Primary" FullWidth="false">Sign in</MudButton>
-                        </MudItem>
-                    </MudGrid>
-                </EditForm>
-                <MudGrid Class="mt-4 pa-8">
-                    <MudItem xs="12">
-                        <MudLink Href="Account/ForgotPassword">Forgot your password?</MudLink><br />
-                        <MudLink Href="@(NavigationManager.GetUriWithQueryParameters("/signup", new Dictionary<string, object?> { ["ReturnUrl"] = ReturnUrl }))">Register as a new user</MudLink><br />
-                        <MudLink Href="Account/ResendEmailConfirmation">Resend email confirmation.</MudLink>
-                    </MudItem>
-                </MudGrid>
+
+<MudContainer MaxWidth="MaxWidth.Small" Class="d-flex justify-center align-center" Style="height: 100vh;">
+    <MudPaper Elevation="3" Class="pa-8 rounded">
+        <EditForm Model="@Input" OnValidSubmit="SignInHandler">
+            <MudGrid Spacing="3">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+
                 <MudItem xs="12">
-                    &nbsp;
+                    <div class="d-flex justify-center mb-8">
+                        <MudIcon Icon="@CustomIcons.ProMgtLogo" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 64px; height: 64px;" />
+                    </div>
                 </MudItem>
+
                 <MudItem xs="12">
-                    &nbsp;
+                    <MudText Align="Align.Center" Typo="Typo.h5" Class="mb-4">Sign in to ProMgt</MudText>
                 </MudItem>
-            </MudPaper>
-        </MudItem>
-    </MudGrid>
+
+                <MudItem xs="12">
+                    <MudTextField Label="Email"
+                                  @bind-Value="Input.Email"
+                                  For="@(() => Input.Email)" />
+                </MudItem>
+
+                <MudItem xs="12">
+                    <MudTextField Label="Password"
+                                  @bind-Value="Input.Password"
+                                  For="@(() => Input.Password)"
+                                  InputType="InputType.Password" />
+                </MudItem>
+
+                <MudItem xs="12">
+                    <MudCheckBox Color="Color.Primary"
+                                 For="@(() => Input.RememberMe)"
+                                 @bind-Value="Input.RememberMe">Remember me</MudCheckBox>
+                </MudItem>
+
+                <MudItem xs="12" Class="d-flex justify-center">
+                    <MudButton ButtonType="ButtonType.Submit"
+                               Variant="Variant.Filled"
+                               Color="Color.Primary"
+                               Size="Size.Large"
+                               FullWidth="true">Sign in</MudButton>
+                </MudItem>
+
+                <MudItem xs="12" Class="d-flex flex-column align-center mt-4">
+                    <MudLink Href="Account/ForgotPassword" Class="mb-2">Forgot your password?</MudLink>
+                    <MudLink Href="@(NavigationManager.GetUriWithQueryParameters("/signup", new Dictionary<string, object?> { ["ReturnUrl"] = ReturnUrl }))">Register as a new user</MudLink>
+                </MudItem>
+            </MudGrid>
+        </EditForm>
+    </MudPaper>
 </MudContainer>
+
 <style>
-    .signup-bg {
-        background: url("day2.jpg") no-repeat center center / cover;
-        box-shadow: 0px 3px 3px -2px rgba(0,0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0,0.14), 0px, 1px 8px 0px rgba(0,0,0,0,0.12);
-    }
+
 </style>
 @code {
     [SupplyParameterFromQuery]
