--- a/ProMgt.Client/Components/Skeleton/TaskGridSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/TaskGridSkeleton.razor
@@ -14,7 +14,7 @@
         {
             <tr>
                 <td style="width: 40px;">
-                    <MudSkeleton Width="24px" Height="24px" Shape="Shape.Circle" />
+                    <MudSkeleton Width="24px" Height="24px" SkeletonType="SkeletonType.Circle" />
                 </td>
                 <td>
                     <MudSkeleton Width="150px" Height="40px" />
