--- a/ProMgt.Client/Components/Skeleton/TaskOverviewSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/TaskOverviewSkeleton.razor
@@ -25,7 +25,7 @@
                         @for (int i = 0; i < 5; i++)
                         {
                             <MudItem Class="d-flex align-center py-2">
-                                <MudSkeleton Width="24px" Height="24px" Shape="Shape.Circle" Class="mr-3" />
+                                <MudSkeleton Width="24px" Height="24px" SkeletonType="SkeletonType.Circle" Class="mr-3" />
                                 <MudSkeleton Width="120px" Height="20px" />
                             </MudItem>
                         }
@@ -42,7 +42,7 @@
                             <MudSkeleton Width="200px" Height="24px" />
                         </MudItem>
                         <MudItem Class="d-flex justify-center">
-                            <MudSkeleton Width="300px" Height="300px" Shape="Shape.Circle" />
+                            <MudSkeleton Width="300px" Height="300px" SkeletonType="SkeletonType.Circle" />
                         </MudItem>
                     </MudPaper>
                 </MudItem>
