--- a/ProMgt.Client/Components/Skeleton/TaskBoardSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/TaskBoardSkeleton.razor
@@ -1,5 +1,27 @@
-﻿<h3>TaskBoardSkeleton</h3>
-
-@code {
-
-}
+﻿
+<MudGrid Class="d-flex flex-row">
+    <MudItem>
+        <MudPaper Elevation="0" Outlined="true" Class="pa-4 rounded-lg d-flex flex-column my-3 task-item" Style="width:284px; height:250px">
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+        </MudPaper>
+    </MudItem>
+    <MudItem>
+        <MudPaper Elevation="0" Outlined="true" Class="pa-4 rounded-lg d-flex flex-column my-3 task-item" Style="width:284px; height:550px">
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+        </MudPaper>
+    </MudItem>
+    <MudItem>
+        <MudPaper Elevation="0" Outlined="true" Class="pa-4 rounded-lg d-flex flex-column my-3 task-item" Style="width:284px; height:450px">
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+            <MudSkeleton Animation="Animation.Wave" Height="175px" Width="100%" />
+        </MudPaper>
+    </MudItem>
+</MudGrid>
+<style>
+    .task-item {
+        width: 284px;
+        height: 450px;
+    }
+</style>
